# modalith-studio

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/: modalith_cli.cpp
apps/gui/: main.cpp  modalith.rc  modalith_controller.cpp  modalith_controller.hpp  plot_items.cpp  plot_items.hpp
apps/gui/qml/: Main.qml  ProjectDialogs.qml
docs/: architecture.md  feature-matrix.md
include/modalith/analysis/: analysis.hpp  physical_optics.hpp  tolerance.hpp
include/modalith/core/: geometry.hpp  glass_catalog.hpp  jacobian.hpp  non_sequential.hpp  optimization.hpp  paraxial.hpp  polarization.hpp  sequential_tracer.hpp  surface.hpp  units.hpp  variable_manager.hpp
include/modalith/io/: zmx_parser.hpp
include/modalith/material/: agf_parser.hpp  material.hpp
include/modalith/math/: fft.hpp
include/modalith/non_sequential/: components.hpp  mc_tracer.hpp  scene.hpp
include/modalith/optim/: optimization.hpp
packaging/windows/: Modalith.iss
resources/: modern_theme.qss
src/: agf_parser.cpp  analysis.cpp  main.cpp  material.cpp  mc_tracer.cpp  optimization.cpp  paraxial.cpp  physical_optics.cpp  scene.cpp  sequential_tracer.cpp  surface.cpp  tolerance.cpp  zmx_parser.cpp
src/gui/: lens_data_model.cpp  lens_data_model.hpp  lens_layout_view.cpp  lens_layout_view.hpp  main_window.cpp  main_window.hpp
src/math/: fft.cpp
src/python/: modalith_py.cpp
tests/: analysis_test.cpp  format_compatibility_test.cpp  gui_workflow_test.cpp  legacy_project_test.cpp  material_extensions_test.cpp  material_test.cpp  ns_test.cpp  optimization_test.cpp  paraxial_test.cpp  physical_optics_test.cpp  python_api_test.py  sequential_tracer_test.cpp  surface_extensions_test.cpp  surface_test.cpp  tolerance_test.cpp  zmx_parser_test.cpp
tests/test_data/: test.agf
